<resources>
    <string name="app_name" translatable="false">Notes</string>
    <string name="login_title">Login</string>
    <string name="username_edit">Username</string>
    <string name="password_edit">Password</string>
    <string name="new_note">New</string>
    <string name="logout">Logout</string>
    <string name="save_note">Save</string>
    <string name="note_title">Title</string>
    <string name="note_content">Content</string>
    <string name="default_string">Here should be something</string>
    <string name="default_test_username" translatable="false">swengb40</string>
    <string name="default_test_password" translatable="false">1.huge.fine.38</string>
</resources>
